# ntfsvc-client-python

./: .earthlyignore  .gitignore  .tool-versions  Earthfile  README.md  Taskfile.yml  mypy.ini  pyproject.toml  setup.py
docs/source/: conf.py  index.rst
examples/: main.py
src/ntfsvc/: client.py
