[tool.poetry]
name = "ntfsvc-client"
version = "0.1.0"
description = "Notification Service client."
authors = ["Nick Ng <ngyewch@gmail.com>"]
packages = [
    { include = "ntfsvc", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
types-requests = "^2.27.17"

[tool.poetry.dev-dependencies]
poetry2setup = "^1.0.0"
mypy = "^0.942"
Sphinx = "^4.5.0"
sphinx-autoapi = "^1.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
